--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2>Interested in helping your students professionalize? Contact us <a href = "mailto: sjq4@pitt.edu">HERE</a>.</h2></div>
     
     <div>
-     <img src="elevator.png" alt="Elevator Pitch Generator...image of an elevator" class="center-image" style="width:25%;height:25%;">
+     <img src="qrcode.png" alt="qr-code link" class="center-image" style="width:25%;height:25%;">
     </div>
     <br>
 <br>    
