--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 <br>
 
 
-<center><a href="https://anc214.github.io/anna-chiaro/" class="button">Digital Portfolio</a></center>
+<center><a href="https://anc214.github.io/anna-chiaro/" class="button">Sample Introduction</a></center>
+  <br>
+  <br>
 
-    <br>
-    <br>
+<center><a href="http://pitt.edu/~smm291/" class="button">Sample Digital Portfolio</a></center>
 
-  <center><a href="http://pitt.edu/~esl41/project-reflection/" class="button">Project Reflection</a></center>
 
 
 
