--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <div class="textblock">
-    <h2>"What might it look like if many people became literate in this technology or if institutions build on the assumption that many people are literate in it? How might we shape the education for these skills to help them be equally distributed?" <br><br>-Vee, <em>Coding Literacies</em> (2017, p.224)</h2>
+    <h2>"What might it look like if many people became literate in this technology or if institutions build on the assumption that many people are literate in it? How might we shape the education for these skills to help them be equally distributed?" <br><br>-Vee, <em>Coding Literacy</em> (2017, p.224)</h2>
     </div>
   <br>
     <br>
@@ -66,7 +66,12 @@
 
 
 
-
+    <div class="textblock">
+  <h1>Working with code in Open Fuego supplements the writing and rhetorical work we already do in the composition classroom.</h1>
+    </div>
+     <div>
+     <img src="Canons.png" alt="Canons of Rhetoric" class="center-image" style="width:65%;height:65%;">
+    </div>
 
 
 
@@ -89,7 +94,7 @@
 
 
      <div class="textblock">
-  <h1>Pedagogical and Tool Design Goals</h1>
+  <h1>basic coding Pedagogical and Tool Design Goals</h1>
     </div>
 <div> <img src="research.png"
       class="center-image" alt="areas of research" style="width:50%;height:50%;">
@@ -98,7 +103,13 @@
 
 
         <div class="textblock">
-  <h1>What's the data say? <em>Working with code</em> in the composition classroom will lead to new possibilities for composing and new pathways for student empowerment. </h1>
+            <h1>What's the data say? <em>Working with code</em> in the composition classroom will lead to new possibilities for composing and new pathways for student empowerment. <b><em>Mostly...</em></b></h1>
+            <ul>
+  <li>Technical Communications Survey - 200+ respondents, STEM/Non-STEM Students</li>
+  <li>FYC Survey - 5 teachers, 80+ respondents</li>
+  <li>Educator Survey/Interviews - Ongoing</li>            
+</ul>
+            <b>-I'm always looking for collaborators.</b> 
  </div>
 
 
@@ -109,12 +120,7 @@
     </div>
 
 
-    <div class="textblock">
-  <h1>Designed to support the kinds of work we are already doing with our students.</h1>
-    </div>
-     <div>
-     <img src="Canons.png" alt="Canons of Rhetoric" class="center-image" style="width:65%;height:65%;">
-    </div>
+
 
 
     <br>
