--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     <img src="pgrid6.jpg" alt="Person walking up to the Cathedral of learning at University of Pittsburgh">
   </div>
 </div>
-       <center><h5>Open Fuego :  Think  : Code + Writing and Communicating
-           </h5></center>
+       <center><h5>Fully adaptable for your classroom/purposes</h5></center>
 <br>
 <br>
 <br>
@@ -67,7 +66,7 @@
 
 
     <div class="textblock">
-  <h1>Working with code in Open Fuego supplements the writing and rhetorical work we already do in the composition classroom.</h1>
+  <h1>Open Fuego :  Think  : Code + Rhetoric and Composition</h1>
     </div>
      <div>
      <img src="Canons.png" alt="Canons of Rhetoric" class="center-image" style="width:65%;height:65%;">
@@ -105,9 +104,9 @@
         <div class="textblock">
             <h1>What's the data say? <em>Working with code</em> in the composition classroom will lead to new possibilities for composing and new pathways for student empowerment. <b><em>Mostly...</em></b></h1>
             <ul>
-  <li>Technical Communications Survey - 200+ respondents, STEM/Non-STEM Students</li>
-  <li>FYC Survey - 5 teachers, 80+ respondents</li>
-  <li>Educator Survey/Interviews - Ongoing</li>            
+  <li><b>Technical Communications Survey</b> - 200+ respondents, STEM/Non-STEM Students</li>
+  <li><b>FYC Survey</b> - 5 teachers, 80+ respondents, funded by an CCCC Emergent Researcher Grant</li>
+  <li><b>Educator Surveys/Interviews</b> - Ongoing</li>            
 </ul>
             <b>-I'm always looking for collaborators.</b> 
  </div>
