--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <br>
   <br>
 
-<center><a href="https://sites.pitt.edu/~dls170/" class="button">Sample Digital Portfolio</a></center>
+<center><a href="https://sites.pitt.edu/%7Earo34/" class="button">Sample Digital Portfolio</a></center>
 
 
 
@@ -93,7 +93,7 @@
 
 
      <div class="textblock">
-  <h1>basic coding Pedagogical and Tool Design Goals</h1>
+  <h1>basic coding Pedagogical Goals</h1>
     </div>
 <div> <img src="research.png"
       class="center-image" alt="areas of research" style="width:50%;height:50%;">
@@ -104,11 +104,10 @@
         <div class="textblock">
             <h1>What's the data say? <em>Working with code</em> in the composition classroom will lead to new possibilities for composing and new pathways for student empowerment. <b><em>Mostly...</em></b></h1>
             <ul>
-  <li><b>Technical Communications Survey</b> - 200+ respondents, STEM/Non-STEM Students</li>
-  <li><b>FYC Survey</b> - 5 teachers, 80+ respondents, funded by an CCCC Emergent Researcher Grant</li>
+  <li><b>TPC Survey</b> - 200+ respondents, STEM/Non-STEM Students</li>
+  <li><b>FYC Survey</b> - 5 teachers with no coding experience, 80+ student respondents, funded by an CCCC Emergent Researcher Grant</li>
   <li><b>Educator Surveys/Interviews</b> - Ongoing</li>            
 </ul>
-            <b>-I'm always looking for collaborators.</b> 
  </div>
 
 
