--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 
 
     <div class="textblock">
-        <h2>Interested in helping your students and colleagues use code to make cool multimodal documents? <a href = "mailto: sjq4@pitt.edu">Email</a> Stephen Quigley.</h2></div>
+        <h2>Interested in helping your institution facillitate code in the classroom? <a href="https://github.com/Open-Fuego/Open-Fuego-Coding-Tools">Go to this GitHub repository</a> and follow the instructions on the ReadMe, or
+          <a href = "mailto: sjq4@pitt.edu">Email Stephen Quigley</a>.</h2></div>
 
     <div>
      <img src="elevator.png" alt="screenshot of elevator pitch tool" class="center-image" style="width:25%;height:25%;">
